--- a/ios/qbplatform.xcodeproj/xcshareddata/xcschemes/qbplatform.xcscheme
+++ b/ios/qbplatform.xcodeproj/xcshareddata/xcschemes/qbplatform.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "svfadmin.app"
-               BlueprintName = "svfadmin"
-               ReferencedContainer = "container:svfadmin.xcodeproj">
+               BuildableName = "qbplatform.app"
+               BlueprintName = "qbplatform"
+               ReferencedContainer = "container:qbplatform.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "svfadminTests.xctest"
-               BlueprintName = "svfadminTests"
-               ReferencedContainer = "container:svfadmin.xcodeproj">
+               BuildableName = "qbplatformTests.xctest"
+               BlueprintName = "qbplatformTests"
+               ReferencedContainer = "container:qbplatform.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "svfadmin.app"
-            BlueprintName = "svfadmin"
-            ReferencedContainer = "container:svfadmin.xcodeproj">
+            BuildableName = "qbplatform.app"
+            BlueprintName = "qbplatform"
+            ReferencedContainer = "container:qbplatform.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "svfadmin.app"
-            BlueprintName = "svfadmin"
-            ReferencedContainer = "container:svfadmin.xcodeproj">
+            BuildableName = "qbplatform.app"
+            BlueprintName = "qbplatform"
+            ReferencedContainer = "container:qbplatform.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
