--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.4.1",
     "axios": "^0.19.2",
     "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-alphabetlistview": "^0.3.1",
