--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "moment": "^2.29.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-action-sheet": "^2.2.0",
     "react-native-alphabetlistview": "^0.3.1",
     "react-native-calendars": "^1.403.0",
+    "react-native-camera": "^3.40.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.2",
