--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,10 @@ target 'qbplatform' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
   use_flipper!
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   post_install do |installer|
     flipper_post_install(installer)
   end
