fixed crash issue

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,12 @@ target 'qbplatform' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'appcenter-core', :path => '../node_modules/appcenter'
+
+  pod 'appcenter-analytics', :path => '../node_modules/appcenter-analytics'
+
+  pod 'appcenter-crashes', :path => '../node_modules/appcenter-crashes'
+
   post_install do |installer|
     flipper_post_install(installer)
   end
