--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "appcenter": "4.0.0",
+    "appcenter-analytics": "4.0.0",
+    "appcenter-crashes": "4.0.0",
     "axios": "^0.19.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
