--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/datetimepicker": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/native": "^5.5.0",
@@ -21,7 +22,7 @@
     "axios": "^0.19.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
-    "react": "16.11.0",
+    "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-action-sheet": "^2.2.0",
     "react-native-alphabetlistview": "^0.3.1",
@@ -30,6 +31,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^0.28.0",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
