--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^0.28.0",
+    "react-native-iphone-x-helper": "^1.3.0",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "use-debounce": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
