--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.63.3",
     "react-native-action-sheet": "^2.2.0",
     "react-native-alphabetlistview": "^0.3.1",
+    "react-native-barcode-mask": "^1.2.4",
     "react-native-calendars": "^1.403.0",
     "react-native-camera": "^3.40.0",
     "react-native-elements": "^2.0.2",
