--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-camera": "^3.40.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^0.28.0",
     "react-native-iphone-x-helper": "^1.3.0",
     "react-native-modal-datetime-picker": "^9.1.0",
