fixed build issues

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
+
+MYAPP_UPLOAD_STORE_FILE=svfexecutive-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=svfexecutive-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=svfex@123!
+MYAPP_UPLOAD_KEY_PASSWORD=svfex@123!
