--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-barcode-mask": "^1.2.4",
     "react-native-calendars": "^1.403.0",
     "react-native-camera": "^3.40.0",
+    "react-native-code-push": "^6.4.1",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-pan-zoom": "^2.1.12",
