--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/datetimepicker": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/progress-bar-android": "^1.0.4",
+    "@react-native-community/progress-view": "^1.2.3",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-picker/picker": "^1.9.3",
     "@react-navigation/native": "^5.5.0",
@@ -32,14 +34,17 @@
     "react-native-camera": "^3.40.0",
     "react-native-code-push": "^6.4.1",
     "react-native-elements": "^2.0.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^0.28.0",
     "react-native-iphone-x-helper": "^1.3.0",
     "react-native-modal-datetime-picker": "^9.1.0",
+    "react-native-pdf": "^6.2.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-share": "^5.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
